<resources>
    <string name="app_name">Lipi</string>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <!-- Label for overflow menu option that inserts fake error data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <!-- Label for overflow menu option that deletes all error data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All errors</string>
    <!-- Title for the activity to add a new error [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_error">Add new Error</string>
    <!-- Label for editor menu option to save error and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <!-- Label for editor overflow menu option that deletes the current error [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>
    <!-- Label for installation date of attributes in the editor [CHAR LIMIT=30] -->
    <string name="installation_date">Installation Date</string>
    <!-- Label for Error date of attributes in the editor [CHAR LIMIT=30] -->
    <string name="error_date">Error Date</string>
    <!-- Label for Error time of attributes in the editor [CHAR LIMIT=30] -->
    <string name="hint_error_date">27/06/2019</string>
    <string name="hint_error_time">12:05</string>
    <string name="hint_install_date">27/06/2015</string>
    <string name="error_time">Error Time</string>
    <!-- Text for error code in the editor [CHAR LIMIT=30] -->
    <string name="error_code">Error Code</string>
    <!-- Text hint for error code in the editor [CHAR LIMIT=30] -->
    <string name="hint_error_code">Ex: ERR013</string>
    <!-- Text hint for machine id in the editor [CHAR LIMIT=30] -->
    <string name="hint_machine_id">Ex: 01356189</string>
    <!-- Text for machine location field in the editor [CHAR LIMIT=30] -->
    <string name="machine_location">Machine Location</string>
    <!-- Text hint for machine location field in the editor [CHAR LIMIT=30] -->
    <string name="hint_machine_location">Ex: Udaipur</string>
    <!-- Text for machine location field in the editor [CHAR LIMIT=30] -->
    <string name="machine_id">Machine ID</string>
    <!-- Label for dropdown menu option for error type [CHAR LIMIT=20] -->
    <string name="error_type">Error Unknown</string>
    <!-- Label for dropdown menu option for error type if unknown [CHAR LIMIT=20] -->
    <string name="error_type_unknown">Error Unknown</string>
    <!-- Label for dropdown menu option for error type [CHAR LIMIT=20] -->
    <string name="error_type_1">Example Description 1</string>
    <!-- Label for dropdown menu option for error type [CHAR LIMIT=20] -->
    <string name="error_type_2">Example Description 2</string>
    <!-- Label for dropdown menu option for error type [CHAR LIMIT=20] -->
    <string name="error_type_3">Example Description 3</string>
    <!-- Label for dropdown menu option for error type [CHAR LIMIT=20] -->
    <string name="error_type_4">Example Description 4</string>

    <string name="enter_machine_id">Enter the Machine Id to search errors.</string>
    <string name="search">SEARCH</string>
    <string name="enter_error_code">Enter the Error Code to search Machines it occurred on.</string>
</resources>
