<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".View2Activity">
    <!-- Label -->
    <TextView
        style="@style/EditorFieldStyle"
        android:text="@string/enter_error_code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_margin">
        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/error_code" />

        <!-- Input fields -->
        <!-- code field -->
        <EditText
            android:id="@+id/error_code_to_search"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_error_code"
            android:inputType="textCapCharacters" />
    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        style="@style/EditorFieldStyle"
        android:onClick="SearchErrorButton"
        android:text="@string/search" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/view_error_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </ScrollView>


</LinearLayout>